# parallel-io

./: .ghci  .gitignore  README  index.html  parallel-io.cabal  release
Control/Concurrent/: ParallelIO.hs
Control/Concurrent/ParallelIO/: Benchmark.hs  Compat.hs  ConcurrentCollection.hs  ConcurrentSet.hs  Fuzz.hs  Global.hs  Local.hs  Safe.hs  Tests.hs  Unsafe.hs
